fix for excessive spacing when .body contains only 1 p

--- a/h/css/common.scss
+++ b/h/css/common.scss
@@ -396,6 +396,12 @@ blockquote {
 
   .body {
     @include force-wrap;
+    & > *:first-child {
+      margin-top: 0;
+    }
+    & > *:last-child {
+      margin-bottom: 0;
+    }
   }
 
   .bottombar {
